changed footer text

--- a/SmolińskiDominik.html
+++ b/SmolińskiDominik.html
@@ -323,7 +323,10 @@
         </div>
     </main>
     <footer class="footer">
-        <strong>© Copyright 2022 by Smoliński Dominik - wszystkie prawa zastrzeżone</strong>
+        <strong>© Copyright 2022 by Smoliński Dominik - wszystkie prawa zastrzeżone. </strong>
+    </footer>
+    <footer class="footer">
+        <strong>Testowy akapit.</strong>
     </footer>
 </body>
 
