--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         <section>
             <h3 class="section__header">Sport walki w którym dwóch zawodników walczy ze sobą jedynie przy użyciu <span
                     class="strong">pięści.</span></h3>
-            <img class="twoBoxers" width="300"
+            <img class="js-twoBoxers" width="300"
                 src="image/Olanda_Anderson_(Red)_tries_to_land_a_punch_against_Rudolf_Kraj,_2000.jpg" alt="Bokserzy">
             <p>
-                <button class="button__twoBoxers">Usuń zdjęcie</button>
+                <button class="js-button__twoBoxers">Usuń zdjęcie</button>
             </p>
             <article class="article article--dark">
                 <h2 class="article__historia" id="historia">Historia</h2>
@@ -95,9 +95,9 @@
                     </p>
                 </div>
             </article>
-            <img class="championship" width="300" src="image/Cribb_vs_Molineaux_1811.jpg" alt="Mistrzostwo Anglii 1811">
+            <img class="js-championship" width="300" src="image/Cribb_vs_Molineaux_1811.jpg" alt="Mistrzostwo Anglii 1811">
             <p>
-                <button class="button__championship">Usuń zdjęcie</button>
+                <button class="js-button__championship">Usuń zdjęcie</button>
             </p>
         </section>
         <section>
@@ -126,10 +126,10 @@
                     amatorskie
                     mistrzostwa świata.
                     <p></p>
-                    <img class="cup" width="250" src="image/pol_pl_Puchar-Tryumf-9220-zloty-okolicznosciowy-38565_1.jpg"
+                    <img class="js-cup" width="250" src="image/pol_pl_Puchar-Tryumf-9220-zloty-okolicznosciowy-38565_1.jpg"
                         alt="tryumf">
                     <p>
-                        <button class="button__cup">Usuń zdjęcie</button>
+                        <button class="js-button__cup">Usuń zdjęcie</button>
                     </p>
                 </article>
             </div>
