--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="go:image" content="image/share.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/article.css" rel="stylesheet">
     <link href="css/header.css" rel="stylesheet">
@@ -95,7 +95,8 @@
                     </p>
                 </div>
             </article>
-            <img class="js-championship" width="300" src="image/Cribb_vs_Molineaux_1811.jpg" alt="Mistrzostwo Anglii 1811">
+            <img class="js-championship" width="300" src="image/Cribb_vs_Molineaux_1811.jpg"
+                alt="Mistrzostwo Anglii 1811">
             <p>
                 <button class="js-button__championship">Usuń zdjęcie</button>
             </p>
@@ -126,8 +127,8 @@
                     amatorskie
                     mistrzostwa świata.
                     <p></p>
-                    <img class="js-cup" width="250" src="image/pol_pl_Puchar-Tryumf-9220-zloty-okolicznosciowy-38565_1.jpg"
-                        alt="tryumf">
+                    <img class="js-cup" width="250"
+                        src="image/pol_pl_Puchar-Tryumf-9220-zloty-okolicznosciowy-38565_1.jpg" alt="tryumf">
                     <p>
                         <button class="js-button__cup">Usuń zdjęcie</button>
                     </p>
